2001-10-23 14:10 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
  ! source/rdd/dbfntx1.c
     ! fixed support of numeric indexes for negative numbers

2001-10-22 07:20 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   *makefile.bc
     * removed -b option from hbmake

2001-10-22 13:42 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
     + added support for DBOI_NUMBER, for indexord() support
     + added support for DBOI_ORDERCOUNT, for ordlistadd() support

2001-10-22 01:28 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * utils\hbmake\hbmake.prg
     * corrected a couple of typos.

2001-10-22 01:10 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * makefile.vc
     * corrected ECHO and PDF definition.

2001-10-21 19:10 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   * source/compiler/harbour.c
      * Fixed alingment on the _DECL section
   * utils/hbmake/hbmake.prg
     utils/hbmake/hbmutils.prg
      * Small Fixes
      *Removed call to the Harbour profiler
   * todo.txt
      *Removed the hbmake entry

2001-10-21 08:05 GMT Dave Pearson <davep@davep.org>
   * source/hbmake/Makefile
      * Added missing continuation character to line 14.
   * utils/hbmake/hbmutils.prg
      * Adding missing ")" to `if' in line 21.
	
2001-10-20 20:00 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   * source/compiler/harbour.c
      * Changed some function parameters in the _DECL section
   * utils/hbmake/hbmake.prg
      % removed unused variables
      + New parameter -r: recurse sub directories on editor mode
      % enhaced -e and -el: the enhaced parameters has an x on the end.
      using the -ex or -elx tells hbmake to use harbour .obj generation capabilities
      % many For/Next Loop replaced for an fastern Aeval() function call
      * Support for generating output files in other dir
     
   + utils/hbmake/hbmutils.prg
      * All utilities function inside hbmake.prg was moved to this module
   * utils/hbmake/pickfile.prg