@@ -1,3 +1,8 @@
+2001-10-23 20:08 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
+   * source/rdd/dbcmd.c
+     ! Fixed bug in dbCreate, that affected DBF RDD derived 
+       (ntx & cdx) with memo files.
+
 2001-10-23 14:10 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   ! source/rdd/dbfntx1.c
      ! fixed support of numeric indexes for negative numbers
